users-reorganization[B30]: Users module reorganization

--- a/UsersMicroservice/UsersMS/UsersMS.csproj
+++ b/UsersMicroservice/UsersMS/UsersMS.csproj
@@ -21,7 +21,7 @@
   <ItemGroup>
     <Folder Include="src\Users\Application\Commands\UpdateUser\Types\" />
     <Folder Include="src\Users\Application\Queries\GetById\Types\" />
-    <Folder Include="src\Users\Infrastructure\Service\" />
+    <Folder Include="src\Users\Infrastructure\Services\" />
   </ItemGroup>
 
 </Project>
