--- a/UsersMicroservice/UsersMS/UsersMS.csproj
+++ b/UsersMicroservice/UsersMS/UsersMS.csproj
@@ -7,6 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Tests\Drivers\**" />
+    <Compile Remove="Tests\Providers\**" />
+    <Content Remove="Tests\Drivers\**" />
+    <Content Remove="Tests\Providers\**" />
+    <EmbeddedResource Remove="Tests\Drivers\**" />
+    <EmbeddedResource Remove="Tests\Providers\**" />
+    <None Remove="Tests\Drivers\**" />
+    <None Remove="Tests\Providers\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="dotenv.net" Version="3.2.1" />
     <PackageReference Include="DotNetEnv" Version="3.1.1" />
@@ -14,6 +25,10 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.2" />
     <PackageReference Include="MongoDB.Driver" Version="3.0.0" />
+	<PackageReference Include="xunit" Version="2.4.1" />
+	<PackageReference Include="xunit.runner.visualstudio" Version="2.4.3" />
+	<PackageReference Include="Moq" Version="4.16.1" />
+	<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.0" />
 	<PackageReference Include="Swashbuckle.AspNetCore" Version="6.9.0" />
 	<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.3.0" />
   </ItemGroup>
@@ -21,7 +36,6 @@
   <ItemGroup>
     <Folder Include="src\Users\Application\Commands\UpdateUser\Types\" />
     <Folder Include="src\Users\Application\Queries\GetById\Types\" />
-    <Folder Include="src\Users\Infrastructure\Services\" />
   </ItemGroup>
 
 </Project>
